# email-serve-for-rust

./: Cargo.toml  README.md
email/: Cargo.toml
email/src/: lib.rs  mail.rs
serve/: Cargo.toml
serve/src/: lib.rs  main.rs
serve/src/lib/email_mod/: mod.rs
