[package]
name = "email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.10.0-rc.7", features = ["tokio1-native-tls"] }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
