[package]
name = "serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email = { path = "../email" }
axum = { version = "0.5.9" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.21"
tracing-subscriber = { version = "0.3.11" , features = ["fmt", "json", "time","local-time"] }
time = { version = "0.3.7" }
tower-http = { version=  "0.3.4", features=["trace"]} # 请求中间件
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.73" }

[features]
default = ["163"] # 默认 SMTP 为 163
163 = []
QQ = []